added test api, other things for client
- added test api
- repaired checking mfa disabled
- changed token expiration to 1h
- if user is not activated changed response status to 200
- if user needs mfa token changed response status to 200
- added CROS for OPTIONS
- added CROS for error pages also to JSON
